# av2-api

./: .darglint  .gitignore  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  DOWNLOAD.md  LICENSE  NOTICE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ci.yml  lint.yaml  lint.yml  mdbook.yml  release.yaml
conda/: INSTALL.md  environment.yml  install.sh
guide/: book.toml
guide/src/: SUMMARY.md  contributing.md  getting_started.md  introduction.md  testing.md
guide/src/api/: hd_maps.md  map.md  map_api.md
guide/src/datasets/: README.md  lidar.md  map_change_detection.md  motion_forecasting.md  sensor.md
guide/src/datasets/av2/: README.md  lidar.md  sensor.md
guide/src/datasets/tbv/: README.md  map_change_detection.md
guide/src/getting_started/: README.md  api_installation.md  download.md  setup.md
guide/src/tasks/: 3d_object_detection.md  3d_scene_flow.md  motion_forecasting.md  object_detection.md  scene_flow.md  tracking.md
guide/src/tasks/3d_object_detection/: README.md  evaluation.md  submission_format.md
guide/src/tasks/3d_scene_flow/: README.md  submission_format.md
guide/src/tasks/4d_occupancy_forecasting/: README.md
guide/src/tasks/motion_forecasting/: README.md
guide/src/tasks/object_detection/: evaluation.md  submission_foremat.md
guide/src/tutorials/: 3d_object_detection.md
integration_tests/: verify_tbv_download.py
rust/: Cargo.toml  README.md
rust/benches/: benchmark.rs
rust/src/: constants.rs  data_loader.rs  dataloader.rs  frame_utils.rs  io.rs  lib.rs  ops.rs  path.rs  se3.rs  share.rs  so3.rs
rust/src/evaluation/: mod.rs
rust/src/evaluation/detection/: constants.rs  eval.rs  mod.rs  utils.rs
rust/src/geometry/: augmentations.rs  mod.rs  polytope.rs  se3.rs  so3.rs  utils.rs
rust/src/geometry/camera/: mod.rs  pinhole_camera.rs
rust/src/structures/: mod.rs  timestamped_image.rs
scripts/: resolve_release_version.py  validate_tag_version.py
src/av2/: __init__.py  _r.pyi
src/av2/datasets/: __init__.py
src/av2/datasets/lidar/: README.md  __init__.py  splits.py
src/av2/datasets/motion_forecasting/: README.md  __init__.py  constants.py  data_schema.py  scenario_serialization.py
src/av2/datasets/sensor/: README.md  __init__.py  av2_sensor_dataloader.py  constants.py  sensor_dataloader.py  splits.py  utils.py
src/av2/datasets/tbv/: README.md  scene_clusters.py  splits.py
src/av2/evaluation/: __init__.py  typing.py
src/av2/evaluation/common/: __init__.py  constants.py
src/av2/evaluation/detection/: README.md  SUBMISSION_FORMAT.md  __init__.py  constants.py  eval.py  utils.py
src/av2/evaluation/forecasting/: SUBMISSION_FORMAT.md  __init__.py  constants.py  eval.py  utils.py
src/av2/evaluation/scenario_mining/: __init__.py  constants.py  eval.py  hota.py  metric_evaluator.py  metrics.py
src/av2/evaluation/scene_flow/: SUBMISSION_FORMAT.md  constants.py  eval.py  example_submission.py  make_annotation_files.py  utils.py  (+4 more)
src/av2/experimental/: __init__.py
src/av2/geometry/: __init__.py  conversions.py  geometry.py  infinity_norm_utils.py  interpolate.py  iou.py  mesh_grid.py  polyline_utils.py  se3.py  sim2.py  utm.py
src/av2/map/: README.md  __init__.py  drivable_area.py  lane_segment.py  map_api.py  map_primitives.py  pedestrian_crossing.py
src/av2/rendering/: __init__.py  color.py  graphics.py  map.py  map_bev.py  rasterize.py  vector.py  video.py
src/av2/structures/: __init__.py  aggregated_sweep.py  bev_params.py  cuboid.py  ndgrid.py  sweep.py  timestamped_image.py
src/av2/torch/: __init__.py
src/av2/utils/: __init__.py  constants.py  dataclass.py  dense_grid_interpolation.py  depth_map_utils.py  dilation_utils.py  helpers.py  io.py  metric_time.py  raster.py  synchronization_database.py  typing.py
tests/: conftest.py
tests/datasets/sensor/: test_sensor_dataloader.py
tests/evaluation/detection/: test_eval.py
tests/evaluation/scene_flow/: test_eval.py  test_sf_eval.py  test_sf_submission_pipeline.py
tests/geometry/: test_geometry.py  test_pinhole_camera.py  test_utm.py
tests/integration/: verify_tbv_download.py
tests/map/: test_lane_segment.py  test_map_api.py
tests/rendering/: test_color.py  test_map.py  test_rasterize.py  test_video.py
tests/rendering/ops/: test_draw.py
tests/structures/: test_bev_params.py  test_cuboid.py  test_sweep.py
tests/torch/: __init__.py
tests/torch/data_loaders/: test_detection_dataloader.py  test_scene_flow_dataloader.py
tests/torch/dataloaders/: test_detection_dataloader.py  test_sensor.py
tests/torch/datasets/: test_scene_flow.py
tests/torch/structures/: __init__.py  test_cuboids.py  test_lidar.py  test_sweep.py  test_utils.py
tests/unit/: conftest.py  test_release_version.py  test_validate_tag_version.py
tests/unit/evaluation/: __init__.py
tests/unit/geometry/: test_geometry.py  test_interpolate.py  test_pinhole_camera.py  test_utm.py
tests/unit/map/: test_drivable_area.py  test_lane_segment.py  test_map_api.py
tests/unit/rendering/: test_color.py  test_map.py  test_rasterize.py  test_video.py
tests/unit/structures/: test_cuboid.py  test_ndgrid.py  test_sweep.py
tests/unit/utils/: test_dense_grid_interpolation.py  test_depth_map_utils.py  test_infinity_norm_utils.py  test_io.py  test_mesh_grid.py  test_metric_time.py  test_polyline_utils.py  test_raster.py  test_se3.py  test_sim2.py
tests/utils/: test_dilate_utils_unit.py  test_mesh_grid.py  test_polyline_utils.py  test_raster.py  test_se3.py  test_sim2.py
tutorials/: 3d_object_detection.py  detection_data_loader.py  detection_dataloader.py  generate_bev_lidar_reflectance.py  generate_egoview_overlaid_lidar.py  generate_egoview_overlaid_vector_map.py  generate_forecasting_scenario_visualizations.py  generate_per_camera_videos.py  generate_per_log_video_lidar_dataset.py  generate_rendered_scene.py  generate_sensor_dataset_visualizations.py  map_teaser_notebook.py  map_tutorial.ipynb  mf_eval.py  object_detection_evaluation.ipynb  torch_dataloader.py  untar_tbv.py  visualize_av2_scene_open3d.py
(+213 files in other folders)
