[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "av2"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "av",
    "click",
    "joblib",
    "kornia",
    "matplotlib",
    "nox",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "polars",
    "pyarrow",
    "pyproj",
    "rich",
    "scipy",
    "torch",
    "tqdm",
    "universal_pathlib",
    "trackeval @ git+https://github.com/JonathonLuiten/TrackEval.git"
]

dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]

[project.optional-dependencies]
lint = [
    "black[jupyter]",
    "mypy",
    "ruff",
]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
]

[project.urls]
homepage = "https://argoverse.org"
repository = "https://github.com/argoverse/av2-api"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "av2._r"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "D",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
exclude = "build"
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
plugins = "numpy.typing.mypy_plugin"
strict = true

[tool.pyright]
include = ["src"]

reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUntypedFunctionDecorator = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing:skip-covered --cov av2"
testpaths = ["tests"]
