[metadata]
author = Argo AI
author_email = argoverse-api@argo.ai
description_file = README.md
license = MIT
name = av2
url = https://www.argoverse.org
version = attr: av2.__version__

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
    av
    click
    joblib
    matplotlib
    nox
    numba
    numpy>=1.21.5
    opencv-python
    pandas
    pyarrow
    pyproj
    rich
    scipy

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
enable_extensions = G
exclude = build,.nox,.pytype
ignore = ANN101,ANN102,E201,E203,E241,E704,E711,E722,E741,W291,W293,W391,W503,F821,F401,F811,F841,P101,G004,G002,I201,I100,I101
max_line_length = 120
