[package]
name = "av2"
version = "0.3.2"
edition = "2021"
homepage = "https://github.com/argoverse/av2-api"
readme = "../README.md"
repository = "https://github.com/argoverse/av2-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "av2"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.66"
argminmax = { version = "0.6.1", features = [
    "ndarray",
], default-features = false }
blas-src = { version = "0.8", optional = true }
bincode = "1.3.3"
dirs = "4.0.0"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
ignore = "0.4.20"
image = { version = "0.24.8" }
indicatif = "0.17.3"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = [
    "approx",
    "matrixmultiply-threading",
    "rayon",
] }
nshare = { version = "0.9.0", features = ["ndarray"] }
numpy = { version = "0.20.0" }
once_cell = "1.17.1"
openblas-src = { version = "0.10.8", optional = true }
polars = { version = "0.37.0", features = [
    "asof_join",
    "dtype-u8",
    "dtype-u16",
    "lazy",
    "ndarray",
    "ipc",
    "serde",
    "serde-lazy",
] }
pyo3 = { version = "0.20.2", features = ["extension-module"] }
pyo3-polars = "0.11.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde = "1.0.160"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[features]
blas = [
    "blas-src/openblas",
    "ndarray/blas",
    "ndarray/rayon",
    "openblas-src/cblas",
    "openblas-src/system",
]
