[package]
name = "av2"
version = "0.3.5"
edition = "2021"
homepage = "https://github.com/argoverse/av2-api"
readme = "../README.md"
repository = "https://github.com/argoverse/av2-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "av2"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.98"
argminmax = { version = "0.6.3", features = [
    "ndarray",
], default-features = false }
blas-src = { version = "0.10", optional = true }
bincode = "1.3.3"
dirs = "6.0.0"
env_logger = "0.11.8"
glob = "0.3.2"
log = "0.4.27"
ignore = "0.4.23"
image = { version = "0.25.6" }
indicatif = "0.17.11"
itertools = "0.12.1"
ndarray = { version = "0.16.1", features = [
    "approx",
    "matrixmultiply-threading",
    "rayon",
] }
nshare = { version = "0.10.0", features = ["ndarray"] }
numpy = { version = "0.22.1", features = ["gil-refs"] }
once_cell = "1.21.3"
openblas-src = { version = "0.10.11", optional = true }
polars = { version = "0.45.1", features = [
    "asof_join",
    "dtype-u8",
    "dtype-u16",
    "lazy",
    "ndarray",
    "ipc",
    "serde",
    "serde-lazy",
] }
pyo3 = { version = "0.22.6", features = ["extension-module"] }
pyo3-polars = "0.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = "1.0.219"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[features]
blas = [
    "blas-src/openblas",
    "ndarray/blas",
    "ndarray/rayon",
    "openblas-src/cblas",
    "openblas-src/system",
]
